@@ -1,3 +1,11 @@
+2004-08-26  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a crash when using a hash-table as hash-table key in TYPECODES
+	mode.
+	* hashtabl.d (hashcode4_atom): Handle case_machine, case_subr,
+	case_system.
+	Found by the sacla-tests on MacOS X.
+
 2004-08-07  Bruno Haible  <bruno@clisp.org>
 
 	* debug.d (GC): Use UL_to_I for representing the result.
